Add basic content

--- a/index.html
+++ b/index.html
@@ -3,3 +3,8 @@ layout: default
 title: Home
 ---
 {% include header.html %}
+{% include services.html %}
+{% include customers.html %}
+{% include about.html %}
+{% include team.html %}
+{% include contact-cta.html %}
