Add services page

--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 layout: default
 title: Home
 ---
-{% include header.html %}
-{% include services.html %}
-{% include customers.html %}
-{% include about.html %}
-{% include team.html %}
-{% include contact-cta.html %}
-{% include footer.html %}
+{% include home/header.html %}
+{% include home/developing.html %}
+{% include home/customers.html %}
+{% include home/about-home.html %}
+{% include home/team.html %}
+{% include common/contact-cta.html %}
