Add service list

--- a/services.html
+++ b/services.html
@@ -6,5 +6,6 @@ header_image: services.jpg
 ---
 {% include common/header-page.html %}
 {% include services/about-services.html %}
+{% include services/service-list.html %}
 {% include services/other-areas.html %}
 {% include common/contact-cta.html %}
