--- a/services.html
+++ b/services.html
@@ -2,7 +2,9 @@
 layout: default
 title: Services
 permalink: /services/
-header_image: services.jpg
+header_image: header_services.jpg
+header_title: We Offer Free Consultation
+header_text: Got a problem that needs solving right now? Need help assessing your infrastructure or perhaps need to discuss data security?
 ---
 {% include common/header-page.html %}
 {% include services/about-services.html %}
