--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Home
 ---
 {% include home/header.html %}
 {% include home/developing.html %}
-{% include home/customers.html %}
+{% include common/customers.html class='customers-home' %}
 {% include home/about-home.html %}
-{% include home/team.html %}
+{% include common/team.html class='bg-secondary-gradient' %}
 {% include common/contact-cta.html %}
