--- a/about.html
+++ b/about.html
@@ -11,5 +11,5 @@ header_text: We are an expert team of highly dedicated IT specialists, supported
 {% include about/history.html %}
 {% include common/customers.html %}
 {% include about/contact-cta-about.html %}
-{% include common/team.html %}
+{% include common/team-list.html %}
 {% include common/contact-cta.html %}
