--- a/index.html
+++ b/index.html
@@ -6,5 +6,5 @@ title: Home
 {% include home/developing.html %}
 {% include common/customers.html class='customers-home' %}
 {% include home/about-home.html %}
-{% include common/team.html class='bg-secondary-gradient' %}
+{% include common/team-list.html class='bg-secondary-gradient' %}
 {% include common/contact-cta.html %}
