--- a/contact.html
+++ b/contact.html
@@ -2,10 +2,12 @@
 layout: default
 title: Contact
 permalink: /contact/
-header_image: header_about.jpg
+header_image: header_contact.jpg
 header_title: Contact VNK
 header_text: Our software development team builds custom applications which seamlessly integrate into the workflow of your business.
+map: true
 ---
 {% include common/header-page.html %}
 {% include contact/contact-form.html %}
+{% include contact/map.html %}
 {% include common/customers.html %}
