Remove unnecessary scripts and update page header text position

--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@ permalink: /about/
 header_image: header_about.jpg
 header_title: About VNK
 header_text: We are an expert team of highly dedicated IT specialists, supported by strategic and talented technology partners.
+carousel: true
 ---
 {% include common/header-page.html %}
 {% include about/about-about.html %}
