--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,8 @@ permalink: /contact/
 header_image: header_contact.jpg
 header_title: Contact VNK
 header_text: Our software development team builds custom applications which seamlessly integrate into the workflow of your business.
+carousel: true
+contact: true
 map: true
 ---
 {% include common/header-page.html %}
