--- a/pages/infrastructure.html
+++ b/pages/infrastructure.html
@@ -2,9 +2,11 @@
 layout: default
 title: Services
 permalink: /infrastructure/
-header_image: header_team.jpg
+header_image: header_infrastructure.jpg
 header_title: Infrastructure Solutions
 header_text: A strong network design incorporates flexibility and resilience to accommodate future requirements.
 ---
 {% include common/header-page.html %}
+{% include services/about-infrastructure.html %}
+{% include services/infrastructure-solutions.html %}
 {% include common/contact-cta.html %}
