--- a/pages/software.html
+++ b/pages/software.html
@@ -2,7 +2,7 @@
 layout: default
 title: Services
 permalink: /software/
-header_image: header_team.jpg
+header_image: header_software.jpg
 header_title: Software Development
 header_text: Securing The Software That Your Business Depends On & Protecting The Data Your Business Relies On.
 ---
