Fix security icon and update contact text on infrastructure page

--- a/pages/infrastructure.html
+++ b/pages/infrastructure.html
@@ -5,6 +5,7 @@ permalink: /infrastructure/
 header_image: header_infrastructure.jpg
 header_title: Infrastructure Solutions
 header_text: A strong network design incorporates flexibility and resilience to accommodate future requirements.
+contact_text: From hardware, software and system configurations to full cloud based integration services, we will tailor a best of bread solution to fit your specific business needs.
 ---
 {% include common/header-page.html %}
 {% include services/about-infrastructure.html %}
