Fix home page header and contact page shapes

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -9,7 +9,7 @@ carousel: true
 contact: true
 map: true
 ---
-{% include common/header-page.html %}
+{% include common/header-page.html class='mb-0' %}
 {% include contact/contact-form.html %}
 {% include contact/map.html %}
 {% include common/customers.html %}
